adding new service endpoints for image CRUD
