# internal/api_proto/v1/api.pb.gw.go
@@ -99,6 +99,62 @@ func local_request_MybackendGrpcSvc_GetUserInfoByUsername_0(ctx context.Context,
 	return msg, metadata, err
 }
 
+func request_MybackendGrpcSvc_ServiceCreateFromImage_0(ctx context.Context, marshaler runtime.Marshaler, client MybackendGrpcSvcClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ServiceCreateFromImageRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.ServiceCreateFromImage(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MybackendGrpcSvc_ServiceCreateFromImage_0(ctx context.Context, marshaler runtime.Marshaler, server MybackendGrpcSvcServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ServiceCreateFromImageRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ServiceCreateFromImage(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+var filter_MybackendGrpcSvc_DeleteService_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_MybackendGrpcSvc_DeleteService_0(ctx context.Context, marshaler runtime.Marshaler, client MybackendGrpcSvcClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq DeleteServiceRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_MybackendGrpcSvc_DeleteService_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.DeleteService(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MybackendGrpcSvc_DeleteService_0(ctx context.Context, marshaler runtime.Marshaler, server MybackendGrpcSvcServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq DeleteServiceRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_MybackendGrpcSvc_DeleteService_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.DeleteService(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterMybackendGrpcSvcHandlerServer registers the http handlers for service MybackendGrpcSvc to "mux".
 // UnaryRPC     :call MybackendGrpcSvcServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -144,6 +200,46 @@ func RegisterMybackendGrpcSvcHandlerServer(ctx context.Context, mux *runtime.Ser
 			return
 		}
 		forward_MybackendGrpcSvc_GetUserInfoByUsername_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_MybackendGrpcSvc_ServiceCreateFromImage_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/mybackend.v1.MybackendGrpcSvc/ServiceCreateFromImage", runtime.WithHTTPPathPattern("/v1/service"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MybackendGrpcSvc_ServiceCreateFromImage_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MybackendGrpcSvc_ServiceCreateFromImage_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodDelete, pattern_MybackendGrpcSvc_DeleteService_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/mybackend.v1.MybackendGrpcSvc/DeleteService", runtime.WithHTTPPathPattern("/v1/service"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MybackendGrpcSvc_DeleteService_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MybackendGrpcSvc_DeleteService_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -219,15 +315,53 @@ func RegisterMybackendGrpcSvcHandlerClient(ctx context.Context, mux *runtime.Ser
 		}
 		forward_MybackendGrpcSvc_GetUserInfoByUsername_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_MybackendGrpcSvc_ServiceCreateFromImage_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/mybackend.v1.MybackendGrpcSvc/ServiceCreateFromImage", runtime.WithHTTPPathPattern("/v1/service"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MybackendGrpcSvc_ServiceCreateFromImage_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MybackendGrpcSvc_ServiceCreateFromImage_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodDelete, pattern_MybackendGrpcSvc_DeleteService_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/mybackend.v1.MybackendGrpcSvc/DeleteService", runtime.WithHTTPPathPattern("/v1/service"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MybackendGrpcSvc_DeleteService_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MybackendGrpcSvc_DeleteService_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_MybackendGrpcSvc_GetUserInfoById_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "user", "byid"}, ""))
-	pattern_MybackendGrpcSvc_GetUserInfoByUsername_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "user", "byusername"}, ""))
+	pattern_MybackendGrpcSvc_GetUserInfoById_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "user", "byid"}, ""))
+	pattern_MybackendGrpcSvc_GetUserInfoByUsername_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "user", "byusername"}, ""))
+	pattern_MybackendGrpcSvc_ServiceCreateFromImage_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "service"}, ""))
+	pattern_MybackendGrpcSvc_DeleteService_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "service"}, ""))
 )
 
 var (
-	forward_MybackendGrpcSvc_GetUserInfoById_0       = runtime.ForwardResponseMessage
-	forward_MybackendGrpcSvc_GetUserInfoByUsername_0 = runtime.ForwardResponseMessage
+	forward_MybackendGrpcSvc_GetUserInfoById_0        = runtime.ForwardResponseMessage
+	forward_MybackendGrpcSvc_GetUserInfoByUsername_0  = runtime.ForwardResponseMessage
+	forward_MybackendGrpcSvc_ServiceCreateFromImage_0 = runtime.ForwardResponseMessage
+	forward_MybackendGrpcSvc_DeleteService_0          = runtime.ForwardResponseMessage
 )
