# internal/routes/grpc_gw.go
@@ -13,5 +13,17 @@ func AddGrpcGatewayEndpoints(httpRoutingEngine *gin.Engine, s *runtime.ServeMux)
 	vxRouterGroup.GET("/user/*{http_to_grpc_gateway}", gin.WrapH(s))
 	vxRouterGroup.POST("/user/*{http_to_grpc_gateway}", gin.WrapH(s))
 
+	//Railway
+	/*
+		vxRouterGroup.GET("/service/*{http_to_grpc_gateway}", gin.WrapH(s))
+		vxRouterGroup.POST("/service/*{http_to_grpc_gateway}", gin.WrapH(s))
+		vxRouterGroup.PUT("/service/*{http_to_grpc_gateway}", gin.WrapH(s))
+		vxRouterGroup.DELETE("/service/*{http_to_grpc_gateway}", gin.WrapH(s))
+	*/
+	vxRouterGroup.GET("/service", gin.WrapH(s))
+	vxRouterGroup.POST("/service", gin.WrapH(s))
+	vxRouterGroup.PUT("/service", gin.WrapH(s))
+	vxRouterGroup.DELETE("/service", gin.WrapH(s))
+
 	return httpRoutingEngine
 }
